# docvet

./: .gitattributes  .gitignore  .lsp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  codecov.yml  mkdocs.yml  pyproject.toml  release-please-config.json  server.json  sonar-project.properties
.claude/: settings.local.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude/rules/: conventions.md  dependency-vulnerabilities.md  dev-quality-checklist.md  gh-discussions.md  mermaid.md  pull-requests.md  pytest.md  python.md  sonarqube.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  social-preview.html
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement.md  feature_request.md
.github/instructions/: mermaid.instructions.md  pytest.instructions.md  python.instructions.md
.github/test-fixtures/: bad_docstrings.py
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  release-please.yml  test-action.yml  test-publish.yml
.sonarlint/: connectedMode.json
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-add-require-attributes-config-toggle.md  1-2-create-finding-dataclass.md  1-3-section-header-parser-and-node-index.md  1-4-missing-raises-detection-and-orchestrator.md  1-5-missing-yields-and-receives-detection.md  1-6-missing-warns-and-other-parameters-detection.md  1-7-cli-wiring-for-enrichment-check.md  10-1-license-and-package-metadata.md  10-2-readme-with-comparison-table-quickstart-and-badges.md  10-3-pre-commit-hook-and-github-action.md  10-4-changelog-and-publication-pipeline.md  11-1-documentation-site-scaffold-and-core-pages.md  11-2-check-pages-and-configuration-reference.md  11-3-rule-reference-pages.md  12-1-enrichment-module-cognitive-complexity-refactoring.md  12-2-non-enrichment-module-cognitive-complexity-refactoring.md  12-3-sonarqube-minor-findings-resolution.md  12-4-process-and-convention-infrastructure.md  13-1-domain-glossary-with-inline-tooltips.md  13-2-auto-generated-api-reference.md  13-3-github-pages-deployment.md  14-1-release-pipeline-cleanup.md  14-2-marketplace-publishing-and-readme.md  14-3-dogfood-ci.md  14-4-ci-and-pre-commit-integration-docs.md  14-5-docvet-badge.md  15-1-mkdocstrings-configuration-overhaul.md  15-2-fix-own-cross-reference-syntax.md  15-3-tighten-cross-reference-rule-to-require-linkable-syntax.md  16-1-config-parsing-and-merge-logic.md  16-2-integration-verification-and-documentation.md  17-1-post-publish-pypi-smoke-test.md  18-1-rule-page-breadcrumb-back-links.md  19-1-trailing-slash-and-double-star-pattern-support.md  19-2-integration-tests-and-documentation.md  2-1-dataclass-namedtuple-and-typeddict-attributes-detection.md  2-2-plain-class-and-init-py-module-attributes-detection.md  20-1-progress-bar-for-file-processing.md  20-2-per-check-timing-and-total-execution-time.md  21-1-default-output-overhaul.md  (+127 more)
_bmad-output/planning-artifacts/: architecture.md  docvet-pitch.html  epics-adoption.md  epics-agent-adoption.md  epics-cli-ux.md  epics-distribution-adoption.md  epics-docs-publish.md  epics-docs-quality.md  epics-extend-exclude.md  epics-housekeeping.md  epics-multi-style-enrichment.md  epics-next.md  epics-presence-mcp.md  epics-quick-wins-lifecycle-visibility.md  epics.md  implementation-readiness-report-2026-02-08.md  implementation-readiness-report-2026-02-09.md  implementation-readiness-report-2026-02-11.md  implementation-readiness-report-2026-02-19.md  implementation-readiness-report-2026-02-21.md  implementation-readiness-report-2026-02-22.md  implementation-readiness-report-2026-02-25.md  implementation-readiness-report-2026-02-28.md  implementation-readiness-report-2026-03-02.md  prd-validation-report.md  prd.md  sprint-change-proposal-2026-03-23.md
_bmad-output/planning-artifacts/research/: market-python-devtool-presentation-research-2026-02-19.md  technical-mkdocs-plugins-research-2026-02-22.md
_bmad-output/test-artifacts/: test-review-30-4.md  test-review.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: architecture.md  development-guide.md  index.md  main.py  product-vision.md  project-overview.md  project-scan-report.json  rules.yml  source-tree-analysis.md
docs/site/: ai-integration.md  architecture.md  ci-integration.md  cli-reference.md  concepts.md  configuration.md  editor-integration.md  glossary.md  index.md  license.md  privacy.md  suppression.md
docs/site/checks/: coverage.md  enrichment.md  freshness.md  griffe.md  presence.md
docs/site/rules/: extra-param-in-docstring.md  extra-raises-in-docstring.md  extra-returns-in-docstring.md  extra-yields-in-docstring.md  griffe-format-warning.md  griffe-missing-type.md  griffe-unknown-param.md  missing-attributes.md  missing-cross-references.md  missing-deprecation.md  missing-docstring.md  missing-examples.md  missing-init.md  missing-other-parameters.md  missing-param-in-docstring.md  missing-raises.md  missing-receives.md  missing-return-type.md  missing-returns.md  missing-typed-attributes.md  missing-warns.md  missing-yields.md  (+10 more)
includes/: abbreviations.md
scripts/: gen_ref_pages.py
src/docvet/: __init__.py  ast_utils.py  cli.py  config.py  discovery.py  lsp.py  mcp.py  reporting.py
tests/: conftest.py
tests/fixtures/: complete_module.py  missing_raises.py  missing_yields.py  nested_symbols.py  sphinx_style.py
tests/integration/: conftest.py  test_discovery.py  test_fix_cli.py  test_freshness_diff.py  test_griffe_compat.py  test_mcp.py  test_scaffold_roundtrip.py  test_suppression_cli.py
tests/unit/: test_ast_utils.py  test_cli.py  test_cli_fix.py  test_cli_progress.py  test_cli_suppression.py  test_cli_timing.py  test_config.py  test_discovery.py  test_docs_infrastructure.py  test_exports.py  test_init.py  test_lsp.py  test_mcp.py  test_pre_commit_hooks.py  test_reporting.py
(+61 files in other folders)
