[project]
name = "docvet"
version = "1.14.1"
description = "Comprehensive docstring quality vetting for Python projects"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Alberto-Codes", email = "alberto.codes.dev@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
keywords = [
    "ai-agent",
    "ai-coding",
    "code-review",
    "darglint",
    "docstring",
    "docstring-checker",
    "docstring-linter",
    "documentation",
    "github-actions",
    "google-style",

    "linter",
    "llm-tools",
    "mkdocs",
    "mkdocstrings",
    "pre-commit",
    "pydocstyle",
    "python-linter",
    "quality",
    "static-analysis",
]
dependencies = [
    "typer>=0.9",
]

[project.optional-dependencies]
griffe = [
    "griffe>=1.0,<2",
]
lsp = [
    "pygls>=2.0,<3",
]
mcp = [
    "mcp>=1.6,<2",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6",
    "mkdocs-macros-plugin>=1.0",
    "mkdocs-gen-files>=0.6",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=1.0",
]

[project.scripts]
docvet = "docvet.cli:app"

[project.urls]
Homepage = "https://github.com/Alberto-Codes/docvet"
Documentation = "https://alberto-codes.github.io/docvet/"
Source = "https://github.com/Alberto-Codes/docvet"
Issues = "https://github.com/Alberto-Codes/docvet/issues"
Changelog = "https://github.com/Alberto-Codes/docvet/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.7,<1"]
build-backend = "uv_build"

# --------------------------------------------------------------------------- #
# uv — TestPyPI publishing index
# --------------------------------------------------------------------------- #
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# --------------------------------------------------------------------------- #
# Ruff
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "__pycache__", "*.egg-info", ".github/test-fixtures"]

[tool.ruff.lint]
extend-select = ["E501", "I", "D"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.isort]
known-first-party = ["docvet"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# --------------------------------------------------------------------------- #
# Docvet
# --------------------------------------------------------------------------- #
[tool.docvet]
fail-on = ["enrichment", "freshness", "coverage", "griffe", "presence"]
extend-exclude = [".github/test-fixtures/"]

[tool.docvet.presence]
min-coverage = 100.0

# --------------------------------------------------------------------------- #
# Ty (type checker)
# --------------------------------------------------------------------------- #
[tool.ty.src]
include = ["src", "tests"]

# --------------------------------------------------------------------------- #
# Pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (temp git repos, slower)",
    "slow: Slow-running tests",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]

# --------------------------------------------------------------------------- #
# Coverage
# --------------------------------------------------------------------------- #
[tool.coverage.run]
source = ["docvet"]

[tool.coverage.report]
fail_under = 95
show_missing = true

# --------------------------------------------------------------------------- #
# import-linter
# --------------------------------------------------------------------------- #
[tool.importlinter]
root_package = "docvet"

[[tool.importlinter.contracts]]
name = "Check modules are isolated"
type = "independence"
modules = [
    "docvet.checks.enrichment",
    "docvet.checks.freshness",
    "docvet.checks.coverage",
    "docvet.checks.griffe_compat",
    "docvet.checks.presence",
]

# --------------------------------------------------------------------------- #
# Dev dependencies
# --------------------------------------------------------------------------- #
[dependency-groups]
dev = [
    "griffe>=1.0,<2",
    "mcp>=1.6,<2",
    "pygls>=2.0,<3",
    "pyyaml>=6.0",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-mock>=3.15",
    "pytest-randomly>=4.0",
    "readme-renderer[md]>=44.0",
    "ruff>=0.11",
    "ty>=0.0.1a33",
    "import-linter>=2.11",
    "uv-secure>=0.17.0",
]
